--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-image: linear-gradient(to right, rgb(115, 206, 163) , rgb(228, 228, 151));">
     <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Magic Notes </a>
+        <div class="container-fluid" style="background-image: linear-gradient(to right, rgb(5, 5, 5) , rgb(247, 247, 240));">
+            <a class="navbar-brand" href="#" style="color: white;">Magic Notes </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -21,9 +21,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" id="searchTxt" type="search" placeholder="Search" aria-label="Search">
@@ -33,9 +33,12 @@
         </div>
     </nav>
     <div class="container my-3">
-        <h1>WELCOME TO MAGIC NOTES</h1>
-        <div class="card" >
-            <div class="card-body">
+        <!-- <div style="background-color: rgb(231, 231, 138);"> 
+            <h1 >WELCOME TO MAGIC NOTES</h1>
+
+        </div> -->
+        <div class="card"  style="background-color: rgb(99, 166, 192);">
+            <div class="card-body" style="background-color: rgb(99, 166, 192);">
               <h5 class="card-title">Add a Notes</h5>
               <div class="mb-3">
                 <textarea class="form-control" id="addTxt" rows="3"></textarea>
@@ -43,7 +46,7 @@
               <button class="btn btn-primary" id="addBtn">Add Notes</button>
             </div>
             <hr>
-            <h1> Your Notes </h1>
+            <h1 style="margin-left: 2vh;"> Your Notes </h1>
             <hr>
             <div id="notes" class="row container-fluid"></div> </div>
           </div>
